--- a/_config.yml
+++ b/_config.yml
@@ -14,39 +14,40 @@ lang: en
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Europe/Copenhagen
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: philipnielsen.dev                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: A personal outlet of discoveries and developments.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  This site is a personal project to develop my skills in web-development, as well as being a hub of my own knowlegde and interests.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://philipalxnielsen.github.io/' #Change to domain when acquired
 
 github:
-  username: github_username             # change to your github username
+  username: philipalxnielsen             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+linkedin:
+  username: Philip Alexander Nielsen
+
+#twitter:
+  #username: twitter_username            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com             # change to your email address
+  name: Philip Alexander Nielsen
+  #email: example@domain.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    #- https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/philipalxnielsen     # change to your github homepage
+    - https://www.linkedin.com/in/philip-alexander-nielsen-06564732/
 
 google_site_verification:               # fill in to your verification string
 
@@ -81,7 +82,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: '/Philip.jpeg'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
